Modifie la formulation sur l’accueil, le lien vidéo et les tags des items sur les parcours

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ titreHtml: "Accueil | MesServicesCyber"
         <div class="fonction-msc couleur2">
           <h2>Trouvez les contacts pour vous accompagner</h2>
           <p>
-            Retrouvez une liste de contacts et partenaires de votre région pour
+            Trouvez des contacts et partenaires de votre région pour
             répondre à toutes vos questions sur la cyber. (À venir)
           </p>
         </div>
@@ -106,7 +106,7 @@ titreHtml: "Accueil | MesServicesCyber"
           à se lancer dans une démarche de renforcement de la cybersécurité.
         </p>
         <a href="/parcours-debuter" class="bouton primaire"
-        >Débutez en cybersécurité</a
+        >Découvrir la sélection</a
         >
       </div>
     </div>
