[ACCUEIL] Adapte l’affichage des boutons de l’entête
...en tronquant le texte sur mobile

--- a/index.html
+++ b/index.html
@@ -17,10 +17,16 @@ titreHtml: "Accueil | MesServicesCyber"
       partenaires.
     </p>
     <div class="boutons">
-      <a href="/nis2/" class="bouton primaire"
-      >Découvrir les services adaptés à NIS2</a
-      >
-      <a href="/catalogue/" class="bouton secondaire">Découvrir le catalogue complet</a>
+      <a href="/nis2/" class="bouton primaire">
+        <span class="court">Découvrir les services NIS2</span>
+        <span class="long">Découvrir les services adaptés à NIS2</span>
+      </a>
+      <a href="/catalogue/" class="bouton secondaire">
+        <span class="court">Découvrir le catalogue</span>
+        <span class="long">
+        Découvrir le catalogue complet
+        </span>
+      </a>
     </div>
   </div>
 </section>
