Corrige les erreurs d’accessibilité
...relevées par Wave

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ titreHtml: "Accueil | MesServicesCyber"
   <div class="contenu-section">
     <h1>Accédez à votre espace MesServicesCyber</h1>
     <div class="contenu-msc">
-      <img src="assets/images/espace-msc.svg"/>
+      <img src="assets/images/espace-msc.svg" alt="Illustration niveau de maturité cyber"/>
       <div class="fonctions-msc">
         <div class="fonction-msc couleur1">
           <h2>Gérez votre profil ANSSI</h2>
