--- a/nis2.html
+++ b/nis2.html
@@ -8,7 +8,7 @@ titreHtml: "Votre entité est régulée NIS2 ? | MesServicesCyber"
   <div class="contenu-section">
     <div class="fil-ariane">
       <a href="/">Accueil</a>
-      <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
+      <span><img src="/assets/images/icone-chevron-droite.svg" alt=""/> </span>
       <span>Vous accompagner avec NIS2</span>
     </div>
     <h1>Votre entité est régulée NIS2&nbsp;?</h1>
