--- a/catalogue.html
+++ b/catalogue.html
@@ -14,7 +14,7 @@ titreHtml: "Les services et ressources cyber | MesServicesCyber"
   <div class="contenu-section">
     <div class="fil-ariane">
       <a href="/">Accueil</a>
-      <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
+      <span><img src="/assets/images/icone-chevron-droite.svg" alt=""/> </span>
       <span>Explorer le catalogue</span>
     </div>
     <h1>Les services et ressources cyber</h1>
