--- a/parcours-approfondir.html
+++ b/parcours-approfondir.html
@@ -8,9 +8,9 @@ titreHtml: "Cybersécurité : approfondir ! | MesServicesCyber"
   <div class="contenu-section">
     <div class="fil-ariane">
       <a href="/">Accueil</a>
-      <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
+      <span><img src="/assets/images/icone-chevron-droite.svg" alt=""/> </span>
       <span>Découvrir notre sélection</span>
-      <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
+      <span><img src="/assets/images/icone-chevron-droite.svg" alt=""/> </span>
       <span>Les services pour approfondir</span>
     </div>
     <h1>Les services pour approfondir</h1>
