--- a/nis2.html
+++ b/nis2.html
@@ -14,8 +14,7 @@ titreHtml: "Votre entité est régulée NIS2 ? | MesServicesCyber"
     <h1>Votre entité est régulée NIS2&nbsp;?</h1>
     <p>
       La directive NIS 2 vise à renforcer le niveau de cybersécurité des tissus économique et administratif des pays
-      membres de l'UE. Découvrez les services et ressources proposées par l’ANSSI pour accompagner les entités régulées
-      par la directive.
+      membres de l'UE. Découvrez les services et ressources pouvant accompagner les entités régulées par la directive.
     </p>
   </div>
 </section>
