modif-fiches-produit-catalogue

--- a/catalogue.html
+++ b/catalogue.html
@@ -32,7 +32,7 @@ titreHtml: "Les services et ressources cyber | MesServicesCyber"
 
 <div class="encart fond-clair">
   <div class="contenu-section">
-    <h1>Nos parcours adaptés à votre maturité cyber</h1>
+    <h1>Découvrir notre sélection de services et ressources</h1>
     <div class="liste-parcours">
       <div class="carte parcours">
         <img
