--- a/404.html
+++ b/404.html
@@ -20,6 +20,6 @@ layout: defaut
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Page introuvable</strong></p>
+  <p>La page demandée n’a pas pu être trouvée.</p>
 </div>
