Corrige le survol des éléments qui ne sont pas des liens visuels
...Seuls ces liens visuels doivent être soulignés au survol. Le plus simple, car il y a trop d’exceptions, est de mettre en place une classe.

--- a/front/catalogue.html
+++ b/front/catalogue.html
@@ -13,7 +13,7 @@ titreHtml: "Les services et ressources cyber | MesServicesCyber"
 <section class="chapeau fond-sombre">
   <div class="contenu-section">
     <div class="fil-ariane">
-      <a href="/">Accueil</a>
+      <a href="/" class="lien">Accueil</a>
       <span><img src="/assets/images/icone-chevron-droite.svg" alt=""/> </span>
       <span>Explorer le catalogue</span>
     </div>
@@ -44,7 +44,7 @@ titreHtml: "Les services et ressources cyber | MesServicesCyber"
           Découvrez les services et les ressources pour aider votre organisation à se lancer dans une démarche de
           renforcement de la cybersécurité.
         </p>
-        <a href="/parcours-debuter">Découvrir</a>
+        <a href="/parcours-debuter" class="lien">Découvrir</a>
       </div>
       <div class="carte parcours">
         <img
@@ -56,7 +56,7 @@ titreHtml: "Les services et ressources cyber | MesServicesCyber"
           Découvrez les services et les ressources pour aider votre organisation à approfondir la démarche de
           renforcement de la cybersécurité.
         </p>
-        <a href="/parcours-approfondir">Découvrir</a>
+        <a href="/parcours-approfondir" class="lien">Découvrir</a>
       </div>
     </div>
   </div>
