--- a/front/nis2.html
+++ b/front/nis2.html
@@ -7,7 +7,7 @@ titreHtml: "Votre entité est régulée NIS2 ? | MesServicesCyber"
 <section class="chapeau fond-sombre nis2">
   <div class="contenu-section">
     <div class="fil-ariane">
-      <a href="/">Accueil</a>
+      <a href="/" class="lien">Accueil</a>
       <span><img src="/assets/images/icone-chevron-droite.svg" alt=""/> </span>
       <span>Vous accompagner avec NIS2</span>
     </div>
