--- a/front/niveaux-maturite.html
+++ b/front/niveaux-maturite.html
@@ -5,17 +5,18 @@ titreHtml: "5 niveaux de maturité cyber | MesServicesCyber"
 ---
 
 <section class="chapeau fond-sombre">
-    <div class="contenu-section">
-        <div class="fil-ariane">
-            <a href="/">Accueil</a>
-            <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
-            <span>5 niveaux de maturité cyber</span>
-        </div>
-        <h1>5 niveaux de maturité cyber</h1>
-        <p>
-            Découvrez les différents niveaux de maturité cyber, de l’organisation en phase de découverte à celle atteignant une posture optimale.
-        </p>
+  <div class="contenu-section">
+    <div class="fil-ariane">
+      <a href="/" class="lien">Accueil</a>
+      <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
+      <span>5 niveaux de maturité cyber</span>
     </div>
+    <h1>5 niveaux de maturité cyber</h1>
+    <p>
+      Découvrez les différents niveaux de maturité cyber, de l’organisation en phase de découverte à celle atteignant
+      une posture optimale.
+    </p>
+  </div>
 </section>
 
 <script
