--- a/front/parcours-debuter.html
+++ b/front/parcours-debuter.html
@@ -7,7 +7,7 @@ titreHtml: "Cybersécurité : se lancer ! | MesServicesCyber"
 <section class="chapeau fond-sombre">
   <div class="contenu-section">
     <div class="fil-ariane">
-      <a href="/">Accueil</a>
+      <a href="/" class="lien">Accueil</a>
       <span><img src="/assets/images/icone-chevron-droite.svg" alt=""/> </span>
       <span>Découvrir notre sélection</span>
       <span><img src="/assets/images/icone-chevron-droite.svg" alt=""/> </span>
@@ -28,28 +28,28 @@ titreHtml: "Cybersécurité : se lancer ! | MesServicesCyber"
 </section>
 
 <section class="sommaire">
-    <div class="contenu-section">
-        <div class="groupe-boutons">
-          {% for action in site.data.parcours-debuter %}
-          <a href="#{{action[0]}}" class="{%if forloop.first%}actif{% endif %} bouton secondaire">{{action[1].titre}}</a>
-          {% endfor %}
-        </div>
+  <div class="contenu-section">
+    <div class="groupe-boutons">
+      {% for action in site.data.parcours-debuter %}
+      <a href="#{{action[0]}}" class="{%if forloop.first%}actif{% endif %} bouton secondaire">{{action[1].titre}}</a>
+      {% endfor %}
     </div>
+  </div>
 </section>
 
 {% for action in site.data.parcours-debuter %}
-  {%assign indexModulo2 = forloop.index0 | modulo: 2 %}
-  {%if indexModulo2 == 1 %}{%assign fondAlternatif=true%}{%else%}{%assign fondAlternatif=false%}{%endif%}
-  {% assign idAction=action[0] %}
-  {% assign infosAction=action[1] %}
-  {% include action-parcours-avec-items.html
-    id=idAction
-    titre=infosAction.titre
-    explication=infosAction.explication
-    parcours=infosAction.parcours
-    items=infosAction.items
-    fondAlternatif=fondAlternatif
-  %}
+{%assign indexModulo2 = forloop.index0 | modulo: 2 %}
+{%if indexModulo2 == 1 %}{%assign fondAlternatif=true%}{%else%}{%assign fondAlternatif=false%}{%endif%}
+{% assign idAction=action[0] %}
+{% assign infosAction=action[1] %}
+{% include action-parcours-avec-items.html
+id=idAction
+titre=infosAction.titre
+explication=infosAction.explication
+parcours=infosAction.parcours
+items=infosAction.items
+fondAlternatif=fondAlternatif
+%}
 {% endfor %}
 
 {% include encart-nis2.html fond='sombre' %}
