--- a/front/index.html
+++ b/front/index.html
@@ -72,7 +72,7 @@ titreHtml: "Accueil | MesServicesCyber"
         <div class="fonction-msc couleur2">
           <h2>Comparez-vous avec d’autres entités</h2>
           <p>
-            Comparez votre organisation à d’autres similiaires à la vôtre pour
+            Comparez votre organisation à d’autres similaires à la vôtre pour
             identifier vos atouts et vos axes d'amélioration.
           </p>
         </div>
