modif-anssi-accueil

--- a/front/index.html
+++ b/front/index.html
@@ -13,7 +13,7 @@ titreHtml: "Accueil | MesServicesCyber"
   <div class="contenu-section">
     <h1>Mes&ZeroWidthSpace;Services&ZeroWidthSpace;Cyber</h1>
     <p>
-      Accédez aux services et ressources cyber proposés par l’ANSSI et ses
+      Accédez aux services et ressources cyber proposés par l'Agence nationale de la sécurité des systèmes d'information et ses
       partenaires.
     </p>
     <div class="boutons">
