Affiche la page de connexion sur mobile et tablette

--- a/front/connexion.html
+++ b/front/connexion.html
@@ -6,7 +6,9 @@ titreHtml: "Connexion | MesServicesCyber"
 
 <section class="connexion">
   <div class="contenu-section">
-    <div>
+    <h1>Connectez-vous à Mes&ZeroWidthSpace;Services&ZeroWidthSpace;Cyber</h1>
+    <p>Connectez-vous pour profiter d’une expérience personnalisée et accéder à tous nos services.</p>
+    <div class="conteneur-proconnect">
         <a class="proconnect-button" href="/oidc/connexion">
                 <span class="proconnect-sr-only">S'identifier avec ProConnect</span>
         </a>
