Affiche la page de connexion pour la version bureau

--- a/front/connexion.html
+++ b/front/connexion.html
@@ -6,22 +6,28 @@ titreHtml: "Connexion | MesServicesCyber"
 
 <section class="connexion">
   <div class="contenu-section">
-    <h1>Connectez-vous à Mes&ZeroWidthSpace;Services&ZeroWidthSpace;Cyber</h1>
-    <p>Connectez-vous pour profiter d’une expérience personnalisée et accéder à tous nos services.</p>
-    <div class="conteneur-proconnect">
-        <a class="proconnect-button" href="/oidc/connexion">
-                <span class="proconnect-sr-only">S'identifier avec ProConnect</span>
-        </a>
-        <p>
-            <a
-                href="https://www.proconnect.gouv.fr/"
-                target="_blank"
-                rel="noopener noreferrer"
-                title="Qu’est-ce que ProConnect ? - nouvelle fenêtre"
-            >
-                Qu’est-ce que ProConnect ?
-            </a>
-        </p>
+    <div class="contenu-principal">
+      <div>
+      <h1>Connectez-vous à Mes&ZeroWidthSpace;Services&ZeroWidthSpace;Cyber</h1>
+      <p>Connectez-vous pour profiter d’une expérience personnalisée et accéder à tous nos services.</p>
+      <div class="conteneur-proconnect">
+          <a class="proconnect-button" href="/oidc/connexion">
+                  <span class="proconnect-sr-only">S'identifier avec ProConnect</span>
+          </a>
+          <p>
+              <a
+                  href="https://www.proconnect.gouv.fr/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  title="Qu’est-ce que ProConnect ? - nouvelle fenêtre"
+              >
+                  Qu’est-ce que ProConnect ?
+              </a>
+          </p>
+      </div>
+      </div>
+    </div>
+    <div class="contenu-secondaire">
     </div>
   </div>
 </section>
