Illustre la page de connexion avec une image

--- a/front/connexion.html
+++ b/front/connexion.html
@@ -28,6 +28,7 @@ titreHtml: "Connexion | MesServicesCyber"
       </div>
     </div>
     <div class="contenu-secondaire">
+      <img src="/assets/images/illustration-connexion.svg"/>
     </div>
   </div>
 </section>
