Ajoute le formulaire de création de compte
... et les éléments d'interface associés

--- a/front/creation-compte.html
+++ b/front/creation-compte.html
@@ -1,7 +1,24 @@
 ---
-layout: defaut
+layout: creation-compte
 permalink: /creation-compte/
 titreHtml: 'Les services et ressources cyber | MesServicesCyber'
 ---
 
-La création de compte est bientôt disponible.
+<script
+  type="module"
+  crossorigin
+  src="/lib-svelte/dist/assets/creation-compte.js"
+></script>
+
+<section class="chapeau fond-sombre">
+  <div class="contenu-section">
+    <h1>Créez votre compte MesServices&ZeroWidthSpace;Cyber</h1>
+    <p>
+      Accédez aux services et ressources cyber proposés par l’ANSSI et ses
+      partenaires.
+    </p>
+  </div>
+</section>
+<section>
+  <div id="creation-compte"></div>
+</section>
