Supprime le layout de la création de compte et le style associés ... On veut ensuite styliser directement dans les composants svelte.

--- a/front/creation-compte.html
+++ b/front/creation-compte.html
@@ -1,5 +1,5 @@
 ---
-layout: creation-compte
+layout: defaut
 permalink: /creation-compte/
 titreHtml: 'Les services et ressources cyber | MesServicesCyber'
 ---
