Masque la création de compte
... Nous cachons cette page de manière temporaire afin de finaliser les développements.

--- a/front/creation-compte.html
+++ b/front/creation-compte.html
@@ -20,5 +20,6 @@ titreHtml: 'Les services et ressources cyber | MesServicesCyber'
   </div>
 </section>
 <section>
-  <div id="creation-compte"></div>
+  <!-- <div id="creation-compte"></div> -->
+   <h2>Création de compte bientôt disponible</h2>
 </section>
