Corrige visuellement le design des selecteurs

--- a/front/creation-compte.html
+++ b/front/creation-compte.html
@@ -20,6 +20,5 @@ titreHtml: 'Les services et ressources cyber | MesServicesCyber'
   </div>
 </section>
 <section>
-  <!-- <div id="creation-compte"></div> -->
-   <h2>Création de compte bientôt disponible</h2>
+  <div id="creation-compte"></div>
 </section>
