--- a/front/index.html
+++ b/front/index.html
@@ -93,7 +93,7 @@ titreHtml: "Accueil | MesServicesCyber"
         </div>
       </div>
     </div>
-    <a href="#a" class="bouton primaire">Connectez-vous sur MesServicesCyber</a>
+    <a href="/connexion" class="bouton primaire">Connectez-vous sur MesServicesCyber</a>
   </div>
 </section>
 
