--- a/front/index.html
+++ b/front/index.html
@@ -22,7 +22,7 @@ titreHtml: "Accueil | MesServicesCyber"
         <span class="long">Découvrir les services adaptés à NIS2</span>
       </a>
       <a href="/catalogue/" class="bouton secondaire">
-        <span class="court">Découvrir le catalogue</span>
+        <span class="court">Accéder au catalogue</span>
         <span class="long">
         Découvrir le catalogue complet
         </span>
@@ -37,7 +37,7 @@ titreHtml: "Accueil | MesServicesCyber"
 
     <div id="extrait"></div>
 
-    <a href="/catalogue" class="bouton primaire">Découvrez plus de services</a>
+    <a href="/catalogue" class="bouton primaire">Accéder à plus de services</a>
   </div>
 </section>
 
