--- a/front/aPropos.html
+++ b/front/aPropos.html
@@ -2,7 +2,7 @@
 layout: page-statique
 permalink: /aPropos/
 titreHtml: "À propos | MesServicesCyber"
-titrePageStatique: "À Propos"
+titrePageStatique: "À propos"
 ---
 <p>MesServicesCyber est la plateforme pour faciliter l'accès de tous aux services et ressources de l'ANSSI et de ses partenaires. Elle est conçue par <a href="https://www.ssi.gouv.fr/agence/missions/rapport-dactivite-2020/" target="_blank">le laboratoire d'innovation de l'ANSSI</a>, en lien avec l'incubateur de services numériques <a href="https://beta.gouv.fr/startups/" target="_blank">“BetaGouv”</a> de la direction interministérielle du numérique (DINUM).</p>
 <p>MesServicesCyber est conçu comme un catalogue qui permet aux entités publiques et entreprises d’accéder directement à diverses ressources utiles pour renforcer leurs connaissances en cybersécurité et mieux protéger les systèmes d’information de sa structure.</p>
