[CORRECTION] Corrige le titre de la page

--- a/front/creation-compte.html
+++ b/front/creation-compte.html
@@ -1,7 +1,7 @@
 ---
 layout: defaut
 permalink: /creation-compte/
-titreHtml: 'Les services et ressources cyber | MesServicesCyber'
+titreHtml: 'Création de compte | MesServicesCyber'
 ---
 
 <script
