--- a/front/contacts.html
+++ b/front/contacts.html
@@ -4,6 +4,12 @@ permalink: /contacts/
 titreHtml: 'Vos contacts | MesServicesCyber'
 ---
 
+<script
+  type="module"
+  crossorigin
+  src="/lib-svelte/dist/assets/contacts.js"
+></script>
+
 <section class="chapeau fond-sombre">
    <div class="contenu-section">
     <h1>Vos contacts</h1>
@@ -11,4 +17,10 @@ titreHtml: 'Vos contacts | MesServicesCyber'
       Des contacts cyber utiles de proximité pour vous orienter.
     </p>
   </div>
+</section>
+
+<section>
+   <div class="contenu-section">
+      <div id="contacts"></div>
+   </div>
 </section>
