--- a/front/apres-authentification.html
+++ b/front/apres-authentification.html
@@ -2,6 +2,8 @@
 layout: defaut
 permalink: /apres-authentification/
 ---
-
-Vous êtes connecté
 <script type="module" src="/scripts/apres-authentification.js"></script>
+
+<section>
+  <div style="height: 700px;"></div>
+</section>
