--- a/front/index.html
+++ b/front/index.html
@@ -66,14 +66,14 @@ titreHtml: "Accueil | MesServicesCyber"
           <h2>Gérez votre profil ANSSI</h2>
           <p>
             Dites-le nous une fois pour utiliser tous les services numériques de
-            l’ANSSI en commençant par vous authentifier via ProConnect. (À venir)
+            l’ANSSI en commençant par vous authentifier via ProConnect.
           </p>
         </div>
         <div class="fonction-msc couleur2">
           <h2>Comparez-vous avec d’autres entités</h2>
           <p>
             Comparez votre organisation à d’autres similaires à la vôtre pour
-            identifier vos atouts et vos axes d'amélioration.
+            identifier vos atouts et vos axes d'amélioration. (À venir)
           </p>
         </div>
         <div class="fonction-msc couleur1">
@@ -88,7 +88,7 @@ titreHtml: "Accueil | MesServicesCyber"
           <h2>Trouvez les contacts pour vous accompagner</h2>
           <p>
             Trouvez des contacts et partenaires de votre région pour
-            répondre à toutes vos questions sur la cyber. (À venir)
+            répondre à toutes vos questions sur la cyber. 
           </p>
         </div>
       </div>
