Ajoute le style de la page sécurité

--- a/front/securite.html
+++ b/front/securite.html
@@ -6,7 +6,7 @@ titrePageStatique: "Sécurité"
 ---
 
 <p>
-  L&apos;ANSSI soumet MesSservicesCyber à un rythme d&apos;homologation
+  L&apos;ANSSI soumet MesServicesCyber à un rythme d&apos;homologation
   soutenu (tous les ans) dans le cadre d&apos;une démarche de renforcement
   continue de la sécurité du service numérique.
 </p>
