--- a/front/index.html
+++ b/front/index.html
@@ -37,7 +37,7 @@ titreHtml: "Accueil | MesServicesCyber"
 
     <div id="extrait"></div>
 
-    <a href="/catalogue" class="bouton primaire">Accéder à plus de services</a>
+    <a href="/catalogue" class="bouton primaire">Accédez à plus de services</a>
   </div>
 </section>
 
@@ -112,7 +112,7 @@ titreHtml: "Accueil | MesServicesCyber"
           à se lancer dans une démarche de renforcement de la cybersécurité.
         </p>
         <a href="/parcours-debuter" class="bouton primaire"
-        >Découvrir la sélection</a
+        >Découvrez la sélection</a
         >
       </div>
     </div>
