Ajoute un retour à la ligne

--- a/front/services-anssi.html
+++ b/front/services-anssi.html
@@ -12,6 +12,6 @@ sousTitrePageStatique: "Retrouvez les différents services de l'ANSSI que vous u
     alt="Fonctionnalité à venir"
   />
   <h4>
-    Retrouvez très prochainement les services ANSSI que vous utilisez.
+    Retrouvez très prochainement<br>les services ANSSI que vous utilisez.
   </h4>
 </div>
