Uniformise l’encart NIS2

--- a/front/index.html
+++ b/front/index.html
@@ -41,20 +41,7 @@ titreHtml: "Accueil | MesServicesCyber"
   </div>
 </section>
 
-<section class="nis2">
-  <div class="contenu-section">
-    <img
-            class="illustration"
-            src="assets/images/directive-nis2.svg"
-            alt="NIS2"
-    />
-    <h1>Votre entité est régulée NIS2 ?</h1>
-    <p>
-      Découvrez tous les services accessibles aux entités regulées NIS2
-    </p>
-    <a href="/nis2/" class="bouton primaire">Découvrez les services</a>
-  </div>
-</section>
+{% include encart-nis2.html fond='sombre' %}
 
 <section class="votre-espace-cyber">
   <div class="contenu-section">
