[SOIN] Utilise le fil d’ariane Svelte dans la page des niveaux de maturité

--- a/front/niveaux-maturite.html
+++ b/front/niveaux-maturite.html
@@ -4,13 +4,21 @@ permalink: /niveaux-maturite/
 titreHtml: "5 niveaux de maturité cyber | MesServicesCyber"
 ---
 
+<script
+  type="module"
+  crossorigin
+  src="/lib-svelte/dist/assets/fil-ariane.js"
+></script>
+
+<script type="application/json" id="donnees">
+  {
+    "feuille": "5 niveaux de maturité cyber"
+  }
+</script>
+
 <section class="chapeau fond-sombre">
   <div class="contenu-section">
-    <div class="fil-ariane">
-      <a href="/" class="lien">Accueil</a>
-      <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
-      <span>5 niveaux de maturité cyber</span>
-    </div>
+    <div id="fil-ariane"></div>
     <h1>5 niveaux de maturité cyber</h1>
     <p>
       Découvrez les différents niveaux de maturité cyber, de l’organisation en phase de découverte à celle atteignant
@@ -20,9 +28,9 @@ titreHtml: "5 niveaux de maturité cyber | MesServicesCyber"
 </section>
 
 <script
-        type="module"
-        crossorigin
-        src="/lib-svelte/dist/assets/niveaux-maturite.js"
+  type="module"
+  crossorigin
+  src="/lib-svelte/dist/assets/niveaux-maturite.js"
 ></script>
 
 
