Permets de personnaliser la branche connectée du fil d’ariane

--- a/front/parcours-approfondir.html
+++ b/front/parcours-approfondir.html
@@ -15,6 +15,9 @@ titreHtml: "Cybersécurité : approfondir ! | MesServicesCyber"
     "branche": {
       "nom": "Découvrir notre sélection"
     },
+    "brancheConnectee": {
+      "nom": "Notre sélection"
+    },
     "feuille": "Les services pour approfondir"
   }
 </script>
