--- a/front/parcours-debuter.html
+++ b/front/parcours-debuter.html
@@ -15,6 +15,9 @@ titreHtml: "Cybersécurité : se lancer ! | MesServicesCyber"
     "branche": {
       "nom": "Découvrir notre sélection"
     },
+    "brancheConnectee": {
+      "nom": "Notre sélection"
+    },
     "feuille": "Les services pour se lancer"
   }
 </script>
