Ajoute une page d’inscription

--- a/front/connexion.html
+++ b/front/connexion.html
@@ -16,6 +16,7 @@ titreHtml: "Connexion | MesServicesCyber"
           </a>
           <p>
               <a
+                  class="lien"
                   href="https://www.proconnect.gouv.fr/"
                   target="_blank"
                   rel="noopener noreferrer"
