Ajoute un lien vers la page d’inscription
...sur la page de connexion

--- a/front/connexion.html
+++ b/front/connexion.html
@@ -26,6 +26,11 @@ titreHtml: "Connexion | MesServicesCyber"
               </a>
           </p>
       </div>
+        <div class="pas-de-compte">
+          <p>Vous n’avez pas encore de compte ? </p>
+          <a class="lien" href="/inscription" title="S’inscrire">S’inscrire</a>
+        </div>
+
       </div>
     </div>
     <div class="contenu-secondaire">
