Utilise un middleware pour ajouter la méthode nonce
...qui génère un nonce aléatoire sur toutes les requêtes

--- a/back/tests/ressources/factice.html
+++ b/back/tests/ressources/factice.html
@@ -2,5 +2,6 @@
 <html lang="en">
 <body>
 Ce fichier est utilisé pour renvoyer un contenu HTML factice pour les tests.
+<script nonce="%%NONCE%%"></script>
 </body>
 </html>
