[SOIN] Ne passe pas de répartition des besoins pour les favoris

--- a/front/favoris-partages.html
+++ b/front/favoris-partages.html
@@ -4,7 +4,7 @@ permalink: /favoris-partages/
 titreHtml: 'Favoris partagés | MesServicesCyber'
 ---
 
-{% include script-donnees-json.html repartition=site.data.catalogue %}
+{% include script-donnees-json.html %}
 
 <script
   type="module"
