--- a/front/favoris.html
+++ b/front/favoris.html
@@ -4,7 +4,7 @@ permalink: /favoris/
 titreHtml: 'Vos favoris | MesServicesCyber'
 ---
 
-{% include script-donnees-json.html repartition=site.data.catalogue %}
+{% include script-donnees-json.html %}
 
 <script
   type="module"
