--- a/front/demande-aide-mon-aide-cyber.html
+++ b/front/demande-aide-mon-aide-cyber.html
@@ -1,7 +1,7 @@
 ---
 layout: defaut
 permalink: /cyberdepart/
-titreHtml: "Votre Cyber Départ | MesServicesCyber"
+titreHtml: "Le diagnostic cyberdépart | MesServicesCyber"
 ---
 <script
   type="module"
