[ACCUEIL] Affiche l’encart diagnostic cyber
...à la place de l’encart parcours

--- a/front/index.html
+++ b/front/index.html
@@ -87,27 +87,7 @@ titreHtml: 'Accueil | MesServicesCyber'
   </div>
 </section>
 
-<section class="encart fond-sombre">
-  <div class="contenu-section">
-    <div class="liste-parcours">
-      <div class="carte parcours">
-        <img
-          src="/assets/images/debuter-cyber.png"
-          alt="Illustration débutant cyber"
-          class="illustration"
-        />
-        <h2>Les services pour se lancer</h2>
-        <p>
-          Découvrez les services et les ressources pour aider votre organisation
-          à se lancer dans une démarche de renforcement de la cybersécurité.
-        </p>
-        <a href="/parcours-debuter" class="bouton primaire"
-          >Découvrez la sélection</a
-        >
-      </div>
-    </div>
-  </div>
-</section>
+{% include encart-cyberdepart.html fond='sombre' %}
 
 <section class="anssi">
   <div class="contenu-section">
