[PARCOURS DEBUTER] Affiche l’encart diagnostic cyber
...à la place de l’encart NIS2

--- a/front/parcours-debuter.html
+++ b/front/parcours-debuter.html
@@ -72,4 +72,4 @@ titreHtml: 'Cybersécurité : se lancer ! | MesServicesCyber'
   %}
 {% endfor %}
 
-{% include encart-nis2.html fond='sombre' %}
+{% include encart-cyberdepart.html fond='sombre' %}
