[PARCOURS DEBUTER] Remplace le CTA par un lien vers le diagnostic cyber

--- a/front/parcours-debuter.html
+++ b/front/parcours-debuter.html
@@ -33,8 +33,8 @@ titreHtml: 'Cybersécurité : se lancer ! | MesServicesCyber'
       aider.
     </p>
     <div class="cta">
-      <p>Votre entité est régulée NIS2 ?</p>
-      <a href="/nis2" class="bouton primaire">Découvrir les services adaptés</a>
+      <p>Bénéficier d’un diagnostic cyber gratuit pour renforcer rapidement la cybersécurité de votre organisation.</p>
+      <a href="/nis2" class="bouton primaire">Demander mon diagnostic cyber</a>
     </div>
   </div>
 </section>
@@ -46,7 +46,7 @@ titreHtml: 'Cybersécurité : se lancer ! | MesServicesCyber'
       <a
         href="#{{action[0]}}"
         class="{%if forloop.first%}actif{% endif %} bouton secondaire"
-        >{{action[1].titre}}</a
+      >{{action[1].titre}}</a
       >
       {% endfor %}
     </div>
