[SOIN] Supprime les layouts inutiles
...c’est-à-dire ceux qui ne sont utilisés qu’une seule fois et qui n’apporte rien de plus que des styles qui peuvent être descendus au niveau de la page.

--- a/front/catalogue.html
+++ b/front/catalogue.html
@@ -1,7 +1,10 @@
 ---
-layout: catalogue
+layout: defaut
 permalink: /catalogue/
 titreHtml: 'Les services et ressources cyber | MesServicesCyber'
+styles:
+  - /assets/styles/catalogue.css
+  - /assets/styles/carte-item.css
 ---
 
 <script
