--- a/front/connexion.html
+++ b/front/connexion.html
@@ -1,7 +1,8 @@
 ---
-layout: connexion
+layout: defaut
 permalink: /connexion/
 titreHtml: 'Connexion | MesServicesCyber'
+styles: /assets/styles/connexion.css
 ---
 
 <section class="connexion">
