--- a/front/niveaux-maturite.html
+++ b/front/niveaux-maturite.html
@@ -1,7 +1,8 @@
 ---
-layout: niveaux-maturite
+layout: defaut
 permalink: /niveaux-maturite/
 titreHtml: '5 niveaux de maturité cyber | MesServicesCyber'
+styles: /assets/styles/niveaux-maturite.css
 ---
 
 <script
