Ajoute le bloc Communauté MesServicesCyber à l'accueil

--- a/front/index.html
+++ b/front/index.html
@@ -82,12 +82,37 @@ titreHtml: 'Accueil | MesServicesCyber'
       </div>
     </div>
     <a href="/connexion" class="bouton primaire"
-      >Connectez-vous sur MesServicesCyber</a
+    >Connectez-vous sur MesServicesCyber</a
     >
   </div>
 </section>
 
 {% include encart-cyberdepart.html fond='sombre' %}
+
+<section class="communaute-msc">
+  <div class="contenu-section">
+    <h1>Rejoignez la communauté MesServicesCyber et Innovation ANSSI&nbsp;!</h1>
+    <img src="assets/images/illustration-s-informer.svg" alt="Illustration niveau de maturité cyber" />
+    <div class="contenu">
+      <div>
+        <p>En tant que <b>membre de la communauté</b>, vous pourrez :</p>
+        <ul>
+          <li>
+            <b>Échanger</b> directement avec vos pairs pour une collaboration facilitée.
+          </li>
+          <li>
+            <b>Découvrir</b> en avant-première les nouvelles fonctionnalités à venir.
+          </li>
+          <li>
+            <b>Participer</b> activement au développement de MesServicesCyber en nous partageant vos besoins et
+            suggestions d’amélioration.
+          </li>
+        </ul>
+      </div>
+    </div>
+    <a href="https://tally.so/r/wa6o22" class="bouton primaire">Rejoindre la communauté</a>
+  </div>
+</section>
 
 <section class="anssi">
   <div class="contenu-section">
