Ajoute le bloc Communauté MonServiceSécurisé à l'accueil

--- a/front/index.html
+++ b/front/index.html
@@ -89,6 +89,29 @@ titreHtml: 'Accueil | MesServicesCyber'
 
 {% include encart-cyberdepart.html fond='sombre' %}
 
+<section class="communaute-mss">
+  <div class="contenu-section">
+    <h1>Rejoignez la communauté MonServiceSécurisé !</h1>
+    <div class="contenu-msc">
+      <img src="assets/images/communaute-mss.svg" alt="Illustration niveau de maturité cyber" />
+      <div>
+        <ul>
+          En tant que membre de la communauté vous pourrez :
+          <li>
+            Échanger directement avec vos pairs pour une collaboration facilitée.
+          </li>
+          <li>
+            Découvrir en avant-première les nouvelles fonctionnalités à venir.
+          </li>
+          <li>
+            Participer activement au développement de MesServicesCyber en nous partageant vos besoins et suggestions d’amélioration.
+          </li>
+        </ul>
+      </div>
+      <a href="https://tally.so/r/wa6o22" class="bouton primaire">Rejoindre la communauté</a>
+    </div>
+</section>
+
 <section class="anssi">
   <div class="contenu-section">
     <h1>Qu’est-ce que l’ANSSI&nbsp;?</h1>
