--- a/front/confidentialite.html
+++ b/front/confidentialite.html
@@ -26,6 +26,10 @@ sousTitrePageStatique: 'En vigueur à partir du 04/03/2025'
   <li>
     Gérer la liste de diffusion de la lettre d&#39;information de la solution.
   </li>
+  <li>
+    Mettre en place un questionnaire à destination des parties prenantes de l'écosystème cyber 
+    pour amender le catalogue de la plateforme.
+  </li>
 </ul>
 <h2>Quelles sont les données à caractère personnel que nous traitons ?</h2>
 <ul>
@@ -34,6 +38,9 @@ sousTitrePageStatique: 'En vigueur à partir du 04/03/2025'
     numéro de téléphone (facultatif) ;
   </li>
   <li>Données relatives au test de maturité : nom, prénom, adresse e-mail ;</li>
+  <li>
+    Données relatives au questionnaire : nom, prénom, adresse e-mail, numéro de téléphone (facultatif)
+  </li>
   <li>
     Données relatives à la lettre d&#39;information : nom, prénom, adresse
     e-mail ;
@@ -149,6 +156,16 @@ sousTitrePageStatique: 'En vigueur à partir du 04/03/2025'
       <td data-label="Garanties">
         <a href="https://crisp.chat/fr/privacy/"
           >https://crisp.chat/fr/privacy/</a
+        >
+      </td>
+    </tr>
+    <tr>
+      <td data-label="Sous-traitant">Tally</td>
+      <td data-label="Traitement réalisé">Outil de mise en place du questionnaire</td>
+      <td data-label="Pays destinataire">Belgique</td>
+      <td data-label="Garanties">
+        <a href="https://tally.so/help/data-processing-agreement"
+          >https://tally.so/help/data-processing-agreement</a
         >
       </td>
     </tr>
