Stylise une page d'article Crisp de facon générique
... Le fichier scss associé a été renommé en article-crisp.scss afin de le rendre plus générique et de pouvoir l'utiliser pour tous les articles MSC et à terme le fichier devra être partageable pour tous les services du Lab utilisant Crisp pour générer des articles.

--- a/front/promouvoir-msc.html
+++ b/front/promouvoir-msc.html
@@ -1,8 +1,6 @@
 ---
-layout: defaut
+layout: article-crisp
 permalink: /promouvoir-messervicescyber/
-styles:
-  - /assets/styles/promouvoir-msc.css
 ---
 
 <script
@@ -10,6 +8,5 @@ styles:
   crossorigin
   src="/lib-svelte/dist/assets/promouvoir-msc.js"
 ></script>
-
 
 <div id="promouvoir-msc"></div>
