[ARTICLE CRISP] Affiche le titre HTML

--- a/front/promouvoir-msc.html
+++ b/front/promouvoir-msc.html
@@ -1,6 +1,7 @@
 ---
 layout: article-crisp
 permalink: /promouvoir-messervicescyber/
+titreHtml: '🚀 Promouvoir MesServicesCyber | MesServicesCyber'
 ---
 
 <script
