[CORRECTION] Ajoute le style manquant pour la page favoris
...afin d'afficher les cartes correctement

--- a/front/favoris.html
+++ b/front/favoris.html
@@ -2,6 +2,8 @@
 layout: defaut
 permalink: /favoris/
 titreHtml: 'Vos favoris | MesServicesCyber'
+styles:
+  - /assets/styles/carte-item.css
 ---
 
 {% include script-donnees-json.html %}
