--- a/front/confidentialite.html
+++ b/front/confidentialite.html
@@ -315,10 +315,12 @@ sousTitrePageStatique: 'En vigueur à partir du 04/03/2025'
 </ul>
 <h2>Annexe – Critères d’éligibilité du catalogue</h2>
 <p>Vous représentez une entité publique (Etat, collectivité territoriale, OPSN) ou une association à but non lucratif établie en France, souhaitant agir pour la confiance numérique;
+</p>
+<p>
 Le dispositif que vous proposez : 
 </p>
 <ul>
-<li>Aide des entités publiques et/ou privées à renforcer leur cybersécurité;/li>
+<li>Aide des entités publiques et/ou privées à renforcer leur cybersécurité;</li>
 <li>N’est pas exclusivement destiné aux particuliers;</li>
 <li>A fait la preuve de sa performance et de son impact (nombre d’utilisation uniques, récurrence, retours utilisateurs);</li>
 <li>Dispose d’un accès gratuit qui va perdurer;</li>
