--- a/front/parcours-approfondir.html
+++ b/front/parcours-approfondir.html
@@ -13,10 +13,10 @@ titreHtml: 'Cybersécurité : approfondir ! | MesServicesCyber'
 <script type="application/json" id="donnees">
   {
     "branche": {
-      "nom": "Découvrir notre sélection"
+      "nom": "Découvrir nos sélections"
     },
     "brancheConnectee": {
-      "nom": "Notre sélection"
+      "nom": "Nos sélections"
     },
     "feuille": "Les services pour approfondir"
   }
