[CORRECTION] Ajoute la branche manquante dans le fil d'Ariane
...pour la page NIS2

--- a/front/nis2.html
+++ b/front/nis2.html
@@ -12,6 +12,12 @@ titreHtml: 'Votre entité est régulée NIS2 ? | MesServicesCyber'
 
 <script type="application/json" id="donnees">
   {
+    "branche": {
+      "nom": "Découvrir nos sélections"
+    },
+    "brancheConnectee": {
+      "nom": "Nos sélections"
+    },
     "feuille": "Vous accompagner avec NIS2"
   }
 </script>
