[BLOC COMMUNAUTE] Ouvre une nouvelle fenêtre sur clic
...sur le bouton, et affiche une icône de lien externe, comme vu avec le métier

--- a/front/index.html
+++ b/front/index.html
@@ -110,7 +110,7 @@ titreHtml: 'Accueil | MesServicesCyber'
         </ul>
       </div>
     </div>
-    <a href="https://tally.so/r/wa6o22" class="bouton primaire">Rejoindre la communauté</a>
+    <a href="https://tally.so/r/wa6o22" target="_blank" class="bouton primaire">Rejoindre la communauté</a>
   </div>
 </section>
 
